--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html lang="ro">
-    <title></title>
-    <head><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\index.html">Corabia</a></strong> -de Alexandru Macedonski</head>
-    <meta charset="UTF-8">
-        <body>
-            <p>
+
+    <title>Corabia de Alexandru Macedonski</title>
+        <style type="text/css">
+            body { color: blue;} 
+            div {background: none;}
+            span{border: 2px solid green;}           
+        </style>
+            <img src="C:\Users\User\Desktop\proiecte\5poezii\imagini\sailing-boat-boat-svgrepo-com.svg" /><br/>
+
+        <head><strong><mark>Corabia</mark></strong> de Alexandru <a href="C:\Users\User\Desktop\proiecte\5poezii\index.html">Macedonski</a><br/>
+                <br/>
+            
+               <meta charset="UTF-8">
+
+         <body>
+                <p><strong>
                 La ţărm, corabia oprită<br/>
                 E ninsă de zăpada lunii<br/>
                 Şi marea tace odihnită,<br/>
@@ -15,7 +26,7 @@
                 Verzuiele unde dormitează.<br/>
                 Novicii râd… – Cârmaciul oftează,<br/>
                 Matrozii melancolic cântă.<br>
-                <br/>
+               <br/>                
                 Oraşul întreg scânteiază<br/>
                 Cu felinarele aprinse…<br/>
                 Muzicile vesel vibrează,<br/>
@@ -25,11 +36,13 @@
                 Răscoala etăţii-i frământă…<br/>
                 Safire pe ceruri lăcrămează.<br/>
                 Din cap mişcând, cârmaciul oftează,<br/>
-                Matrozii melancolic cântă.
+                Matrozii melancolic cântă.<br/>
 
+                </strong></p>
 
+                <img src="C:\Users\User\Desktop\proiecte\5poezii\imagini\corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
 
-            </p>
+            
         </body>
 
 
