--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ro">
         <title></title>
-            <head><strong>Continutul</strong> click pe titlul dorit</head>
+            <head><strong>Cuprins</strong> (click pe titlul dorit)</head>
             <meta charset="UTF-8">
             <body>
                 <h1></h1>
