--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="ro">
-    <title></title>
+    <title>Mugurii de Lucian Blaga</title>
     <meta charset="UTF-8">
      <head><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\index.html">Mugurii</a></strong> -de Lucian Blaga</head>
-         <body>
-            <p>
+        <br/>
+        <br/>
+     <body>
+
+        <picture>
+            <source media="(min-width: 640px)" srcset="C:\Users\User\Desktop\proiecte\5poezii\imagini\vantul1.webp" />
+            <source type="image/webp" srcset="C:\Users\User\Desktop\proiecte\5poezii\imagini\vantul.webp" />
+            <img src="C:\Users\User\Desktop\proiecte\5poezii\imagini\vantul2.jpg" width="320" height="213"/>
+            <p><strong>
+
                 Un vânt de seară<br/>
                 aprins sărută cerul la apus<br/>
                 şi-i scoate ruji de sânge pe obraji.<br/>
@@ -16,8 +24,11 @@
                 amari înfloresc potire grele de nectar”<br/>
                 şi cald din temelii tresar<br/>
                 de-amarul tinerelor mele patimi.
-            </p>
-        
+
+            </strong></p>
+
+        </picture>
+
          </body>
 
 
