--- a/mihaieminescu.html
+++ b/mihaieminescu.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ro">
-    <title></title>
+    <title>De ce in a-l meu suflet de MIhai Eminescu</title>
         <head><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\index.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</head>
         <meta charset="UTF-8">
             <body>
@@ -11,7 +11,7 @@
                     De ce mi-e vorba sacă,<br/>
                     De ce mi-e ochiul mort?<br/>
                     <br/>
-                    De ce pustiu mi-e capul,<br/>
+                    De ce pustiu mi-e <a href="https://ro.wikipedia.org/wiki/G%C3%A2nditorul">capul,</a><br/>
                     Viața într-un fel?<br/>
                     Şi tu… tu ești aceea<br/>
                     Ce mă întrebi astfel?
