--- a/tudorarghezi.html
+++ b/tudorarghezi.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="ro">
-    <title></title>
-    <head><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\index.html">Paza buna</a></strong> -de Tudor Arghezi</head>
+    <title>Paza buna de Tudor Arghezi</title>
+    <style type="text/css">
+        body {color: maroon;}
+        
+        span {border: 1px solid red;}
+    </style>
+    <head><strong>Paza buna</strong> -de Tudor Arghezi<a href="C:\Users\User\Desktop\proiecte\5poezii\index.html"><strong><span title="return la cuprins">.</span></strong></a></head>
     <meta charset="UTF-8">
         <body>
             <h1 id="zona-1"></h1>
-            <p>
+            <p><strong>
+               <mark>
                 S-a întors cercetătoarea<br/>
                 Să le spuie la surori<br/>
                 Că-i deschisă toată floarea<br/>
                 Şi câmpia, de cu zori.<br/>
+                </mark>
                 <br/>
                 Şi-au plecat aproape toate<br/>
                 La cules, cu mii si mii,<br/>
                 Lăsând vorbă la nepoate<br/>
                 Să-ngrijească de copii.<br/>
                 <br/>
+                <mark>
                 Căci muscoii si bondarii<br/>
                 Şi-alte neamuri de pădure,<br/>
                 Pe şoptite, ca tâlharii,<br/>
                 Umblau mierea să le-o fure.<br/>
+                </mark>
                 <br/>
                 Însă paza-n stupi e bună,<br/>
                 Că târziu, dupi apus,<br/>
                 Colo jos, subt stupi, la lună,<br/>
                 Ei zăceau cu burta-n sus.
                 <br/>
-            </p>
-            <h2 id="zona-2"></h2><p>Nota:Tudor Arghezi mai are o poezie in acest proiect</p>
+            </strong></p>
+            <h2 id="zona-2"></h2>
+            <p> Nota: <em>Tudor Arghezi</em> mai are o <span><a href="https://www.libertatea.ro/lifestyle/poezii-scurte-2807297#de-ce-in-al-meu-suflet-mihai-eminescu:~:text=u%C8%99or%20de%20re%C8%9Binut-,Melancolie%20%E2%80%93%20Tudor%20Arghezi,-Am%20luat%20ceasul"><strong>poezie</strong></a></span> in acest proiect </p>
 
         </body>
 </html>
