--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             <meta charset="UTF-8">
             <body>
                 <h1></h1>
-                    <p><strong><a href="../mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</p>
+                    <p><strong><a href="mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</p>
                     <br/>
                     <p><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\alexandrumacedonski.html">Corabia</a></strong> -de Alexandru Macedonski</p>
                     <br/>
@@ -23,5 +23,6 @@
             </body>
 
 </html>
+
 
 
