--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                 <h1></h1>
                     <p><strong><a href="mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</p>
                     <br/>
-                    <p><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\alexandrumacedonski.html">Corabia</a></strong> -de Alexandru Macedonski</p>
+                    <p><strong><a href="alexandrumacedonski.html">Corabia</a></strong> -de Alexandru Macedonski</p>
                     <br/>
                     <p><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\tudorarghezi.html">Paza buna</a></strong> -de Tudor Arghezi</p>
                     <br/>
@@ -23,6 +23,7 @@
             </body>
 
 </html>
+
 
 
 
