--- a/mihaieminescu.html
+++ b/mihaieminescu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ro">
     <title>De ce in a-l meu suflet de MIhai Eminescu</title>
-        <head><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\index.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</head>
+        <head><strong><a href="index.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</head>
         <meta charset="UTF-8">
             <body>
                 <h1 id="zona-1"></h1>
@@ -18,5 +18,6 @@
                 </p>
 
             </body>
+
 
 </html>
