--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -2,7 +2,7 @@
 <html lang="ro">
     <title>Mugurii de Lucian Blaga</title>
     <meta charset="UTF-8">
-     <head><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\index.html">Mugurii</a></strong> -de Lucian Blaga</head>
+     <head><strong><a href="index.html">Mugurii</a></strong> -de Lucian Blaga</head>
         <br/>
         <br/>
      <body>
@@ -30,6 +30,7 @@
         </picture>
 
          </body>
+
 
 
 </html>
