--- a/tudorarghezi.html
+++ b/tudorarghezi.html
@@ -6,7 +6,7 @@
         
         span {border: 1px solid red;}
     </style>
-    <head><strong>Paza buna</strong> -de Tudor Arghezi<a href="C:\Users\User\Desktop\proiecte\5poezii\index.html"><strong><span title="return la cuprins">.</span></strong></a></head>
+    <head><strong>Paza buna</strong> -de Tudor Arghezi<a href="index.html"><strong><span title="return la cuprins">.</span></strong></a></head>
     <meta charset="UTF-8">
         <body>
             <h1 id="zona-1"></h1>
@@ -40,4 +40,5 @@
             <p> Nota: <em>Tudor Arghezi</em> mai are o <span><a href="https://www.libertatea.ro/lifestyle/poezii-scurte-2807297#de-ce-in-al-meu-suflet-mihai-eminescu:~:text=u%C8%99or%20de%20re%C8%9Binut-,Melancolie%20%E2%80%93%20Tudor%20Arghezi,-Am%20luat%20ceasul"><strong>poezie</strong></a></span> in acest proiect </p>
 
         </body>
+
 </html>
