--- a/mihaieminescu.html
+++ b/mihaieminescu.html
@@ -4,9 +4,8 @@
         <head><strong><a href="index.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</head>
         <meta charset="UTF-8">
             <body>
-                <h1>De ce in a-l meu suflet</h1><br/>
-                <p>de<strong> Mihai Eminescu</strong></p>
-                <h6 id="zona-1></h6>
+                <h1 id="zona-1"></h1><br/>
+                
                 <p>
                     De ce în al meu suflet<br/>
                     De ani eu moartea port,<br/>
@@ -23,4 +22,5 @@
 
 
 </html>
+
 
