--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -9,7 +9,7 @@
         </style>
             <img src="C:\Users\User\Desktop\proiecte\5poezii\imagini\sailing-boat-boat-svgrepo-com.svg" /><br/>
 
-        <head><strong><mark>Corabia</mark></strong> de Alexandru <a href="C:\Users\User\Desktop\proiecte\5poezii\index.html">Macedonski</a><br/>
+        <head><strong><mark>Corabia</mark></strong> de Alexandru <a href="index.html">Macedonski</a><br/>
                 <br/>
             
                <meta charset="UTF-8">
@@ -40,7 +40,7 @@
 
                 </strong></p>
 
-                <img src="C:\Users\User\Desktop\proiecte\5poezii\imagini\corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
+                <img src="../corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
 
             
         </body>
