--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
             <meta charset="UTF-8">
             <body>
                 <h1></h1>
-                    <p><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</p>
+                    <p><strong><a href="mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</p>
                     <br/>
-                    <p><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\alexandrumacedonski.html">Corabia</a></strong> -de Alexandru Macedonski</p>
+                    <p><strong><a href="alexandrumacedonski.html">Corabia</a></strong> -de Alexandru Macedonski</p>
                     <br/>
-                    <p><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\tudorarghezi.html">Paza buna</a></strong> -de Tudor Arghezi</p>
+                    <p><strong><a href="tudorarghezi.html">Paza buna</a></strong> -de Tudor Arghezi</p>
                     <br/>
-                    <p><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\lucianblaga.html">Mugurii</a></strong> -de Lucian Blaga</p>
+                    <p><strong><a href="lucianblaga.html">Mugurii</a></strong> -de Lucian Blaga</p>
                     <br/>
                     <p><strong><a href="https://www.libertatea.ro/lifestyle/poezii-scurte-2807297#de-ce-in-al-meu-suflet-mihai-eminescu:~:text=u%C8%99or%20de%20re%C8%9Binut-,Melancolie%20%E2%80%93%20Tudor%20Arghezi,-Am%20luat%20ceasul">
                         Melancolie</a></strong> -de Tudor Arghezi (titlul duce la site-ul Libertatea unde se afla poezia)</p>
