--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -2,15 +2,15 @@
 <html lang="ro">
     <title>Mugurii de Lucian Blaga</title>
     <meta charset="UTF-8">
-     <head><strong><a href="C:\Users\User\Desktop\proiecte\5poezii\index.html">Mugurii</a></strong> -de Lucian Blaga</head>
+     <head><strong><a href="index.html">Mugurii</a></strong> -de Lucian Blaga</head>
         <br/>
         <br/>
      <body>
 
         <picture>
             <source media="(min-width: 640px)" srcset="C:\Users\User\Desktop\proiecte\5poezii\imagini\vantul1.webp" />
-            <source type="image/webp" srcset="C:\Users\User\Desktop\proiecte\5poezii\imagini\vantul.webp" />
-            <img src="C:\Users\User\Desktop\proiecte\5poezii\imagini\vantul2.jpg" width="320" height="213"/>
+            <source type="image/webp" srcset="../imagini\vantul.webp" />
+            <img src="../imagini\vantul2.jpg" width="320" height="213"/>
             <p><strong>
 
                 Un vânt de seară<br/>
