--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -8,7 +8,7 @@
      <body>
 
         <picture>
-            <source media="(min-width: 640px)" srcset="C:\Users\User\Desktop\proiecte\5poezii\imagini\vantul1.webp" />
+            <source media="(min-width: 640px)" srcset="../imagini\vantul1.webp" />
             <source type="image/webp" srcset="../imagini\vantul.webp" />
             <img src="../imagini\vantul2.jpg" width="320" height="213"/>
             <p><strong>
