--- a/tudorarghezi - Cópia.html
+++ b/tudorarghezi - Cópia.html
@@ -6,7 +6,7 @@
         div { background: yellow ;}
         span {border: 1px solid red;}
     </style>
-    <head><strong><div>Paza buna</strong> -de Tudor Arghezi<a href="C:\Users\User\Desktop\proiecte\5poezii\index.html"><strong><span title="return la cuprins">.</span></div></strong></a></head>
+    <head><strong><div>Paza buna</strong> -de Tudor Arghezi<a href="index.html"><strong><span title="return la cuprins">.</span></div></strong></a></head>
     <meta charset="UTF-8">
         <body>
             <h1 id="zona-1"></h1>
