--- a/tudorarghezi.html
+++ b/tudorarghezi.html
@@ -6,7 +6,7 @@
         
         span {border: 1px solid red;}
     </style>
-    <head><strong>Paza buna</strong> -de Tudor Arghezi<a href="C:\Users\User\Desktop\proiecte\5poezii\index.html"><strong><span title="return la cuprins">.</span></strong></a></head>
+    <head><strong>Paza buna</strong> -de Tudor Arghezi<a href="index.html"><strong><span title="return la cuprins">.</span></strong></a></head>
     <meta charset="UTF-8">
         <body>
             <h1 id="zona-1"></h1>
