--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -8,8 +8,8 @@
      <body>
 
         <picture>
-            <source media="(min-width: 640px)" srcset="../imagini\vantul1.webp" />
-            <source type="image/webp" srcset="../imagini\vantul.webp" />
+            <source media="(min-width: 640px)" srcset="../vantul1.webp" />
+            <source type="image/webp" srcset="../vantul.webp" />
             <img src="../vantul2.jpg" width="320" height="213"/>
             <p><strong>
 
