--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -7,7 +7,7 @@
             div {background: none;}
             span{border: 2px solid green;}           
         </style>
-            <img src="C:\Users\User\Desktop\proiecte\5poezii\imagini\sailing-boat-boat-svgrepo-com.svg" /><br/>
+            <img src="/sailing-boat-boat-svgrepo-com.svg" /><br/>
 
         <head><strong><mark>Corabia</mark></strong> de Alexandru <a href="index.html">Macedonski</a><br/>
                 <br/>
@@ -40,7 +40,7 @@
 
                 </strong></p>
 
-                <img src="../corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
+                <img src="/corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
 
             
         </body>
