--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -39,8 +39,9 @@
                 Matrozii melancolic cântă.<br/>
 
                 </strong></p>
+             <a href="/corabie.png
 
-                <img src="/corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
+                <img src="/imagini/corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
 
             
         </body>
