--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -39,7 +39,7 @@
                 Matrozii melancolic cântă.<br/>
 
                 </strong></p>
-             <a href="/corabie.png
+             #<a href="/corabie.png
 
                 <img src="/imagini/corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
 
