--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -41,7 +41,7 @@
                 </strong></p>
              <!-- <a href="/corabie.png -->
 
-                <img src="/imagini/corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
+                <img src="https://victorioanoviciu-bit.github.io/5poezii/imagini/corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
 
             
         </body>
