--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -7,7 +7,7 @@
             div {background: none;}
             span{border: 2px solid green;}           
         </style>
-            <img src="https://github.com/victorioanoviciu-bit/5poezii/imagini/sailing-boat-boat-svgrepo-com.svg" /><br/>
+            <img src="https://victorioanoviciu-bit/github.io/5poezii/imagini/sailing-boat-boat-svgrepo-com.svg" /><br/>
     <br/>
     <br/>
 
