--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -7,7 +7,7 @@
             div {background: none;}
             span{border: 2px solid green;}           
         </style>
-            <a href="https://victorioanoviciu-bit/github.io/5poezii/imagini/sailing-boat-boat-svgrepo-com.svg"/><br/>
+            <a href="imagini/sailing-boat-boat-svgrepo-com.svg"/><br/>
     <br/>
     <br/>
 
