--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -7,7 +7,7 @@
             div {background: none;}
             span{border: 2px solid green;}           
         </style>
-            <p><a href="#zona-1"/></p><br/>
+            <p><a href=""/></p><br/>
     <br/>
     <br/>
 
