--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -7,7 +7,7 @@
             div {background: none;}
             span{border: 2px solid green;}           
         </style>
-            <p><a href="sailing-boat-boat-svgrepo-com.svg"/></p><br/>
+            <p><a href="#sailing-boat-boat-svgrepo-com.svg"/></p><br/>
     <br/>
     <br/>
 
