--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -7,7 +7,7 @@
             div {background: none;}
             span{border: 2px solid green;}           
         </style>
-            <p><a href="lucianblaga.html"/></p><br/>
+            <p><a href="../imagini/corabie.png"/></p><br/>
     <br/>
     <br/>
 
