--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -7,7 +7,7 @@
             div {background: none;}
             span{border: 2px solid green;}           
         </style>
-            <p><a href="imagini/corabie.png" alt="Descrierea imaginii"/></p><br/>
+            <p><img src="imagini/sailing-boat-boat-svgrepo-com.svg" alt="Descrierea imaginii" width="100" heigth="100" /></p><br/>
     <br/>
     <br/>
 
