--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -10,7 +10,7 @@
         <picture>
             <source media="(min-width: 640px)" srcset="../vantul1.webp" />
             <source type="image/webp" srcset="../vantul.webp" />
-            <img src="vantul2.jpg" width="320" height="213"/>
+            <img src="vantul2.jpg" alt="Descrierea imaginii" width="320" height="213"/>
             <p><strong>
 
                 Un vânt de seară<br/>
