--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -8,8 +8,8 @@
      <body>
 
         <picture>
-            <source media="(min-width: 640px)" srcset="../vantul1.webp" />
-            <source type="image/webp" srcset="../vantul.webp" />
+            <!-- <source media="(min-width: 640px)" srcset="../vantul1.webp" /> -->
+            <!-- <source type="image/webp" srcset="../vantul.webp" /> -->
             <img src="vantul2.jpg" alt="Descrierea imaginii" width="480" heigth="240" />
             <p><strong>
 
