--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -10,7 +10,7 @@
         <picture>
             <!-- <source media="(min-width: 640px)" srcset="../vantul1.webp" /> -->
             <!-- <source type="image/webp" srcset="../vantul.webp" /> -->
-            <img src="vantul2.jpg" alt="Descrierea imaginii" width="480" heigth="240" />
+            <img src="imagini/vantul2.jpg" alt="Descrierea imaginii" width="480" heigth="240" />
             <p><strong>
 
                 Un vânt de seară<br/>
