--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -9,7 +9,7 @@
 
         <picture>
             <!-- <source media="(min-width: 640px)" srcset="../vantul1.webp" /> -->
-            <!-- <source type="image/webp" srcset="../vantul.webp" /> -->
+            <source type="image/webp" srcset="imagini/vantul.webp" /> 
             <img src="imagini/vantul2.jpg" alt="Descrierea imaginii" width="480" heigth="240" />
             <p><strong>
 
