--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -8,7 +8,7 @@
      <body>
 
         <picture>
-            <!-- <source media="(min-width: 640px)" srcset="../vantul1.webp" /> -->
+             <source media="(min-width: 640px)" srcset="imagini/vantul1.webp" />
             <source type="image/webp" srcset="imagini/vantul.webp" /> 
             <img src="imagini/vantul2.jpg" alt="Descrierea imaginii" width="480" heigth="240" />
             <p><strong>
