--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -7,7 +7,7 @@
         <br/>
      <body>
 
-        <picture>
+       <!-- <picture> -->
              <source media="(min-width: 640px)" srcset="imagini/vantul1.webp" />
             <source type="image/webp" srcset="imagini/vantul.webp" /> 
             <img src="imagini/vantul2.jpg" alt="Descrierea imaginii" width="240" heigth="120" />
@@ -27,7 +27,7 @@
 
             </strong></p>
 
-        </picture>
+        <!-- </picture> -->
 
          </body>
 
