--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <head><strong>Cuprins</strong> (click pe titlul dorit)</head>
             <meta charset="UTF-8">
             <body>
-                <h1></h1>
+                <h1><id="zona1"><p><strong>START</strong></p></h1>
                     <p><strong><a href="mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</p>
                     <br/>
                     <p><strong><a href="alexandrumacedonski.html">Corabia</a></strong> -de Alexandru Macedonski</p>
@@ -16,6 +16,7 @@
                     <p><strong><a href="https://www.libertatea.ro/lifestyle/poezii-scurte-2807297#de-ce-in-al-meu-suflet-mihai-eminescu:~:text=u%C8%99or%20de%20re%C8%9Binut-,Melancolie%20%E2%80%93%20Tudor%20Arghezi,-Am%20luat%20ceasul">
                         Melancolie</a></strong> -de Tudor Arghezi (titlul duce la site-ul Libertatea unde se afla poezia)</p>
                     <br/>
+                <h2><p><a href="zona1"><strong>REGRES LA START</strong></p></h2>
 
 
 
