--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
                 <h1 id="zona1"><p><strong>START</strong></p></h1>
                     <p><strong><a href="mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</p>
                     <br/>
+                    <p> De ce în al meu suflet<br/>
+                        De ani eu moartea port,<br/>
+                        De ce mi-e vorba sacă,<br/>
+                        De ce mi-e ochiul mort?<br/>
+                <br/>
+                        De ce pustiu mi-e capul,<br/>
+                        Viața într-un fel?<br/>
+                        Şi tu… tu ești aceea<br/>
+                        Ce mă întrebi astfel? <br/> </p>
+                    <br/>
                     <p><strong><a href="alexandrumacedonski.html">Corabia</a></strong> -de Alexandru Macedonski</p>
                     <br/>
                     <p><strong><a href="tudorarghezi.html">Paza buna</a></strong> -de Tudor Arghezi</p>
