--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <head><strong>Cuprins</strong> (click pe titlul dorit)</head>
             <meta charset="UTF-8">
             <body>
-                <h1 id="zona1"><p><strong>START</strong></p></h1>
+                <h1 id="zona-1"><p><strong>START</strong></p></h1>
                     <p><strong><a href="mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</p>
                     <br/>
                     <p> De ce în al meu suflet<br/>
@@ -17,8 +17,32 @@
                         Şi tu… tu ești aceea<br/>
                         Ce mă întrebi astfel? <br/> </p>
                     <br/>
+                <h2 id="zona-2">Poezia numarul 2</h2>
                     <p><strong><a href="alexandrumacedonski.html">Corabia</a></strong> -de Alexandru Macedonski</p>
                     <br/>
+                    <p> La ţărm, corabia oprită<br/>
+                        E ninsă de zăpada lunii<br/>
+                        Şi marea tace odihnită,<br/>
+                        De biciuirile furtunii.<br/>
+                        Catarg şi pânze argintate<br/>
+                        Abia uşor sunt legănate…<br/>
+                        Magia nopţii este sfântă…<br/>
+                        Verzuiele unde dormitează.<br/>
+                        Novicii râd… – Cârmaciul oftează,<br/>
+                        Matrozii melancolic cântă.<br/>
+                        <br/>
+                        Oraşul întreg scânteiază<br/>
+                        Cu felinarele aprinse…<br/>
+                        Muzicile vesel vibrează,<br/>
+                        Curse priveghează-ntinse.<br>
+                        Novicii în port se coboară,<br/>
+                        Spre râs şi petrecere zboară;<br/>
+                        Răscoala etăţii-i frământă…<br/>
+                        Safire pe ceruri lăcrămează.<br/>
+                        Din cap mişcând, cârmaciul oftează,<br/>
+                        Matrozii melancolic cântă.<br/></p>
+                <h2><p><a href="#zona-1">Regres la inceputul poeziei numarul 1</a></p><br/>
+                    <p><a href="#zona-2"></p>Regres la inceputul poeziei numarul 2</h2>
                     <p><strong><a href="tudorarghezi.html">Paza buna</a></strong> -de Tudor Arghezi</p>
                     <br/>
                     <p><strong><a href="lucianblaga.html">Mugurii</a></strong> -de Lucian Blaga</p>
@@ -26,7 +50,7 @@
                     <p><strong><a href="https://www.libertatea.ro/lifestyle/poezii-scurte-2807297#de-ce-in-al-meu-suflet-mihai-eminescu:~:text=u%C8%99or%20de%20re%C8%9Binut-,Melancolie%20%E2%80%93%20Tudor%20Arghezi,-Am%20luat%20ceasul">
                         Melancolie</a></strong> -de Tudor Arghezi (titlul duce la site-ul Libertatea unde se afla poezia)</p>
                     <br/>
-                <h2><p><a href="zona1"><strong>REGRES LA START</strong></p></h2>
+                <h2><p><a href="#zona-1"><strong>REGRES LA START</strong></p></h2>
 
 
 
