--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <head><strong>Cuprins</strong> (click pe titlul dorit)</head>
             <meta charset="UTF-8">
             <body>
-                <h1 id="zona-1"><p><strong>START</strong></p></h1>
+                <h1 id="zona-1"><p><strong>CULEGERE DE POEZII</strong></p></h1>
                     <p><strong><a href="mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</p>
                     <br/>
                     <p> De ce în al meu suflet<br/>
