--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         Safire pe ceruri lăcrămează.<br/>
                         Din cap mişcând, cârmaciul oftează,<br/>
                         Matrozii melancolic cântă.<br/></p>
-                <h2><p><a href="#zona-1">Regres la inceputul poeziei numarul 1 &#21A9; </a></p><br/>
+                <h2><p><a href="#zona-1">Regres la inceputul poeziei numarul 1 &#8617; </a></p><br/>
                     <p><a href="#zona-2"></p>Regres la inceputul poeziei numarul 2</h2>
                     <p><strong><a href="tudorarghezi.html">Paza buna</a></strong> -de Tudor Arghezi</p>
                     <br/>
