--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         Din cap mişcând, cârmaciul oftează,<br/>
                         Matrozii melancolic cântă.<br/></p>
                 <h2><p> <a href="#zona-1">Regres la inceputul poeziei numarul 1 &#x21A9; </a></p><br/>
-                    <p><a href="#zona-2"></p>Regres la inceputul poeziei numarul 2</h2>
+                    <p><a href="#zona-2">Regres la inceputul poeziei numarul 2 &#x21BA;</p> </h2>
                     <p><strong><a href="tudorarghezi.html">Paza buna</a></strong> -de Tudor Arghezi</p>
                     <br/>
                     <p><strong><a href="lucianblaga.html">Mugurii</a></strong> -de Lucian Blaga</p>
