--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ro">
-        <title></title>
-            <head><strong>Cuprins</strong> (click pe titlul dorit)</head>
+        <title>culegere de poezii</title>
+            <head></head>
             <meta charset="UTF-8">
             <body>
                 <h1 id="zona-1"><p><strong>CULEGERE DE POEZII</strong></p></h1>
-                    <p><strong>Cuprins</strong> click pe titlul dorit</p>
+                    <p><strong>Cuprins</strong> (click pe titlul dorit)</p>
                     <p><strong><a href="mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</p>
                     <br/>
                     <p> De ce în al meu suflet<br/>
