--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
             <body>
                 <h1 id="zona-1"><p><strong>CULEGERE DE POEZII</strong></p></h1>
                     <p><strong>Cuprins</strong> (click pe titlul dorit)</p>
-                    <p><strong><a href="mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</p>
+                <h2> <strong><a href="mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu </h2>
                     <br/>
                     <p> De ce în al meu suflet<br/>
                         De ani eu moartea port,<br/>
@@ -18,8 +18,8 @@
                         Şi tu… tu ești aceea<br/>
                         Ce mă întrebi astfel? <br/> </p>
                     <br/>
-                <h2 id="zona-2">Poezia numarul 2</h2>
-                    <p><strong><a href="alexandrumacedonski.html">Corabia</a></strong> -de Alexandru Macedonski</p>
+                <h3 id="zona-2">Poezia numarul 2</h3>
+                    <h2> <strong><a href="alexandrumacedonski.html">Corabia</a></strong> -de Alexandru Macedonski </h2>
                     <br/>
                     <p> La ţărm, corabia oprită<br/>
                         E ninsă de zăpada lunii<br/>
@@ -42,8 +42,8 @@
                         Safire pe ceruri lăcrămează.<br/>
                         Din cap mişcând, cârmaciul oftează,<br/>
                         Matrozii melancolic cântă.<br/></p>
-                <h2><p> <a href="#zona-1">Regres la inceputul poeziei numarul 1 &#x21A9; </a></p><br/>
-                    <p>Regres la inceputul poeziei numarul 2<a href="#zona-2"> &#x21BA;</p> </h2>
+                <h3><p> <a href="#zona-1">Regres la inceputul poeziei numarul 1 &#x21A9; </a></p><br/>
+                    <p>Regres la inceputul poeziei numarul 2<a href="#zona-2"> &#x21BA;</p> </h3>
                     <p><strong><a href="tudorarghezi.html">Paza buna</a></strong> -de Tudor Arghezi</p>
                     <br/>
                     <p><strong><a href="lucianblaga.html">Mugurii</a></strong> -de Lucian Blaga</p>
