--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
                 <h1 id="zona-1"><p><strong>CULEGERE DE POEZII</strong></p></h1>
                     <p><strong>Cuprins</strong> (click pe titlul dorit)</p>
                 <h2> <strong><a href="mihaieminescu.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu </h2>
-                    <br/>
+                    
                     <p> De ce în al meu suflet<br/>
                         De ani eu moartea port,<br/>
                         De ce mi-e vorba sacă,<br/>
@@ -20,7 +20,7 @@
                     <br/>
                 <h3 id="zona-2">Poezia numarul 2</h3>
                     <h2> <strong><a href="alexandrumacedonski.html">Corabia</a></strong> -de Alexandru Macedonski </h2>
-                    <br/>
+                    
                     <p> La ţărm, corabia oprită<br/>
                         E ninsă de zăpada lunii<br/>
                         Şi marea tace odihnită,<br/>
@@ -41,7 +41,9 @@
                         Răscoala etăţii-i frământă…<br/>
                         Safire pe ceruri lăcrămează.<br/>
                         Din cap mişcând, cârmaciul oftează,<br/>
-                        Matrozii melancolic cântă.<br/></p>
+                        Matrozii melancolic cântă.</p><br/>
+                    <br/>
+                    <br/>
                 <h3><p> <a href="#zona-1">Regres la inceputul poeziei numarul 1 &#x21A9; </a></p><br/>
                     <p>Regres la inceputul poeziei numarul 2<a href="#zona-2"> &#x21BA;</p> </h3>
                     <p><strong><a href="tudorarghezi.html">Paza buna</a></strong> -de Tudor Arghezi</p>
