--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ro">
 
-    <title>Corabia de Alexandru Macedonski</title>
+    <title><!-- Corabia de Alexandru Macedonski --></title>
         <style type="text/css">
             body { color: blue;} 
             div {background: none;}
@@ -9,7 +9,7 @@
         </style>
             <p><img src="imagini/sailing-boat-boat-svgrepo-com.svg" alt="Descrierea imaginii" width="100" heigth="100" /></p><br/>
 
-        <h2 id="nava"> <strong><mark>Corabia</mark></strong> de Alexandru <a href="index.html">Macedonski</a><br/> </h2>
+        <h2 id="zona-1"><strong><mark>Corabia</mark></strong> de Alexandru <a href="index.html">Macedonski</a><br/> </h2>
                 <br/>
             
                <meta charset="UTF-8">
@@ -44,7 +44,7 @@
 
                 <img src="https://victorioanoviciu-bit.github.io/5poezii/imagini/corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
                  <br/>
-                 <p><u><a href=#nava">apasa aici pentru return la titlul poeziei</u></p>
+                 <p><u><a href=#zona-1">apasa aici pentru return la titlul poeziei</u></p>
 
             
         </body>
