--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -9,7 +9,8 @@
         </style>
             <p><img src="imagini/sailing-boat-boat-svgrepo-com.svg" alt="Descrierea imaginii" width="100" heigth="100" /></p><br/>
 
-        <h2 id="zona-1"><p><strong><mark>Corabia</mark></strong></p> de Alexandru <a href="index.html">Macedonski</a><br/> </h2>
+        <h2 id="zona-1"><strong><mark>Corabia</mark></strong> de Alexandru <a href="index.html">Macedonski</a> </h2>
+                <br/>
                 <br/>
             
                <meta charset="UTF-8">
