--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -40,7 +40,7 @@
                 Matrozii melancolic cântă.<br/>
 
                 </strong></p>
-                 <p> <em>Return</em> </p>
+                 <p> <em>acest articol face parte dintr-o Culegere de poezii</em> </p>
              <!-- <a href="/corabie.png -->
 
                 <img src="https://victorioanoviciu-bit.github.io/5poezii/imagini/corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
