--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -45,7 +45,7 @@
 
                 <img src="https://victorioanoviciu-bit.github.io/5poezii/imagini/corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
                  <br/>
-                 <p><u><a href=#zona-1">apasa aici pentru return la titlul poeziei</u></p>
+                 <p><u><a href="#zona-1">apasa aici pentru return la titlul poeziei</u></p>
 
             
         </body>
