--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -40,7 +40,10 @@
                 Matrozii melancolic cântă.<br/>
 
                 </strong></p>
-                 <p><fill { color: yelow }> <em>acest articol face parte dintr-o Culegere de poezii</em> </p>
+                     <style type="text/css">
+                         body { color: magenta; }
+                    </style>
+                 <p><em fill="magenta">acest articol face parte dintr-o Culegere de poezii</em> </p>
              <!-- <a href="/corabie.png -->
 
                 <img src="https://victorioanoviciu-bit.github.io/5poezii/imagini/corabie.png" width="280" height="220" alt="Descrierea imaginii"/>
