--- a/alexandrumacedonski.html
+++ b/alexandrumacedonski.html
@@ -39,7 +39,7 @@
                 Din cap mişcând, cârmaciul oftează,<br/>
                 Matrozii melancolic cântă.<br/>
 
-                </strong></p>
+                </strong></p> <br/>
                      <style type="text/css">
                          body { color: magenta; }
                     </style>
