--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -2,7 +2,9 @@
 <html lang="ro">
     <title>Mugurii de Lucian Blaga</title>
     <meta charset="UTF-8">
-     <head><strong><a href="index.html">Mugurii</a></strong> -de Lucian Blaga</head>
+     <head><strong><a href="index.html">Mugurii</a></strong> -de Lucian Blaga
+         <link rel="stylesheet" type="text/css" href="style.css" media="all" />
+     </head>
         <br/>
         <br/>
      <body>
