--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -26,6 +26,8 @@
                 amari înfloresc potire grele de nectar”<br/>
                 şi cald din temelii tresar<br/>
                 de-amarul tinerelor mele patimi.
+                <hr/>
+                <footer>Poezia Mugurii<cite>reprodusa de ziarul Libertatea</cite></footer>
 
             </strong></p>
 
