--- a/lucianblaga.html
+++ b/lucianblaga.html
@@ -29,7 +29,7 @@
                 <hr/>  
 
             </strong></p>
-          <footer>Poezia Mugurii <cite>reprodusa de ziarul Libertatea</cite></footer>
+          <footer>&ndash; Poezia Mugurii <cite>reprodusa de ziarul Libertatea</cite></footer>
 
         <!-- </picture> -->
 
