--- a/mihaieminescu.html
+++ b/mihaieminescu.html
@@ -16,6 +16,11 @@
                     Şi tu… tu ești aceea<br/>
                     Ce mă întrebi astfel?
                 </p>
+                <blockquote>
+                    <p><footer>poezia face parte dintr-un prim proiect html</footer> 
+                    <!-- poezia face parte dintr-unul dintre primele mele proiecte html -->    
+                    </p>
+                </blockquote>
 
             </body>
 
