--- a/mihaieminescu.html
+++ b/mihaieminescu.html
@@ -17,7 +17,7 @@
                     Ce mă întrebi astfel?
                 </p>
                 <blockquote>
-                    <p><footer>poezia face parte dintr-un prim proiect html</footer> 
+                    <p><footer>&ndash; poezia face parte dintr-un prim proiect html</footer> 
                     <!-- poezia face parte dintr-unul dintre primele mele proiecte html -->    
                     </p>
                 </blockquote>
