--- a/mihaieminescu.html
+++ b/mihaieminescu.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ro">
     <title>De ce in a-l meu suflet de MIhai Eminescu</title>
-        <head></head>
+        <head>
         <meta charset="UTF-8">
+           <h1 id="zona-1"></h1>
+                <h3><strong><a href="index.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</h3>
+        </head>
             <body>
-                <h1 id="zona-1"><strong><a href="index.html">De ce in a-l meu suflet</a></strong> -de Mihai Eminescu</h1>
                 <p>
                     De ce în al meu suflet<br/>
                     De ani eu moartea port,<br/>
@@ -21,7 +23,6 @@
                     <!-- poezia face parte dintr-unul dintre primele mele proiecte html -->    
                     </p>
                 </blockquote>
-
             </body>
 
 </html>
